--- a/css/index.css
+++ b/css/index.css
@@ -156,8 +156,9 @@ button:hover {cursor: pointer; color:# }
 .dock {bottom: 0; height: 100px; border-radius: 5px; width: 400px; border: 1px solid #2f335c; background-color: #707BA5; display: flex; justify-content: center; align-items: center; }
 .dockIcons { display: table-cell; width: auto; height: 90px; padding: 10px; opacity: 1;}
 
-#mobile_dock_container {display: none; }
-.mobile_dock_container {position: fixed; width: 100vw !important; bottom: 0; z-index: 0; display: flex; justify-content: center; align-items: center;} 
+#mobile_dock_wrapper {width: 100%;display: flex; align-items: center; justify-content: center;}
+#mobile_dock_container {display: none; width: 100%; display: flex; align-items: center; justify-content: center;}
+.mobile_dock_container {position: fixed; width: 100%; bottom: 0; z-index: 0; display: flex; justify-content: center; align-items: center;} 
 .mobileIcons { display: table-cell;  width: auto; height: 80px; margin: 10px;  opacity: 1; z-index: 1000;}
 .icon_label {color: white; position: absolute; text-align: center; bottom: 0; }
 .icon_button { height: 125px; width: 125px; text-align: center; display: flex; margin-right: 20px; justify-content: center; top: 0;}
@@ -194,12 +195,11 @@ button:hover {cursor: pointer; color:# }
 }
 
 #mobile_notif_close {
-  margin: 0px 0px 25px -5px;
+  margin: 30px 0px 25px 0px;
   width: 20px;
   position: fixed;
-  z-index: 200;
-  width: 30px;
 }
+
 
 #mobile_notif_close:hover {
   transform: scale(5x);
@@ -217,7 +217,7 @@ button:hover {cursor: pointer; color:# }
 
 /* About Window CSS ---------------------------------------------------------------------------------------------------- */
 
-#about_window {width: 98%; max-width: 900px;  max-height:450px; background:#ececec;}
+#about_window {width: 100%; max-width: 900px; height: calc(100% - 200px);  max-height:500px; background:#ececec;}
 .about_menu {width: 100%; bottom: 0px;  position: absolute;  background: #49588b; height: 40px; z-index: 10; align-items: center; }
 .about_menu button {width: 32%; margin-top: 10px; font-family: 'GreycliffCF-Thin', sans-serif; text-transform: uppercase; font-size: 0.85rem; color: white;}
 #middle_about_menu_item {border: 1px solid white; border-style: none solid none solid;}
@@ -225,7 +225,7 @@ button:hover {cursor: pointer; color:# }
 
 .about_content { margin-top: 40px; height: calc(90%); z-index: 2;  display: flex;  align-items: center;  overflow-x: hidden;  }
 .about_section { width: 100%; height: 90%;  align-items: center;  }
-#about_window h1 {font-size: 28px !important; font-family: 'GreycliffCF-Heavy', sans-serif; line-height: 30px;}
+#about_window h1 {font-size: 24px !important; font-family: 'GreycliffCF-Heavy', sans-serif; line-height: 30px;}
 
 .about_menu_item:hover {transform: scale(1.1);}
 .about_col_left {width: calc(50% - 100px); height: 90%;  margin: 0px 0px 100px 50px; float: left;  object-fit: contain; }
@@ -424,6 +424,7 @@ button:hover {cursor: pointer; color:# }
   .about_section {width: 100%;}
   .photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover;}
   .tincture {display: block;}
+  #ct_portrait {margin-top: 175px;}
 }
 
 
@@ -473,7 +474,7 @@ button:hover {cursor: pointer; color:# }
 .mobile_homepage {
   height: 100vh;
   width: 100vw;
-  background-size: cover; background-repeat: no-repeat; background-image: url("../src/desktop_items/mobile_wallpaper.jpg");  background-color: #2E345B;
+  background-size: cover; background-repeat: no-repeat;  background-color: #2E345B;
   top: 40px;
   z-index: 1000000;
   position: fixed; 
@@ -487,7 +488,7 @@ button:hover {cursor: pointer; color:# }
 /* .mobile_homepage_context img {max-height: 100%;} */
 
 
-#mobile_logo {height: 63%; max-width: 240px;  animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
+#mobile_logo {height: 55%; max-width: 200px;  animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
 #mobile_moto {height: 100%;  max-height: 700px; width: 95%; max-width: 430px; }
 .mobile_time {width: 100%; font-size: 75px; color: white;  position: absolute;  }
 .mobile_toolbar {
@@ -513,7 +514,7 @@ button:hover {cursor: pointer; color:# }
 .unlock_mobile {
   position: fixed;
   width: 100%; 
-  max-width: 500px;
+ 
   background: #2c2c2c; 
   height: 60px;
   margin: 0px auto;
