--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ button:hover {cursor: pointer; color:# }
 #time {font-family: 'GreycliffCF-Light', sans-serif;}
 #desktop_toolbar_right img:hover {transform: scale(1.2);}
 .dock_container {position: fixed; width: 100%; bottom: 0px; z-index: 2; display: flex; justify-content: center;} 
-.dock {bottom: 0; height: 100px; border-radius: 5px; width: 400px; border: 1px solid #2f335c; background-color: #707BA5; display: flex; justify-content: center; align-items: center; }
+.dock {bottom: 0; height: 100px; border-radius: 5px; width: 420px; border: 1px solid #2f335c; background-color: #707BA5; display: flex; justify-content: center; align-items: center; }
 .dockIcons { display: table-cell; width: auto; height: 90px; padding: 10px; opacity: 1;}
 
 #mobile_dock_wrapper {width: 100%; display: flex; align-items: center; justify-content: center;}
@@ -181,6 +181,7 @@ button:hover {cursor: pointer; color:# }
 
 #mobile_notification_window {
   width: 101%; 
+  max-width: 500px;
   height: 75px; 
   top: 20px;
   z-index: 1000;
@@ -412,7 +413,7 @@ button:hover {cursor: pointer; color:# }
   #photo_viewer{ top: 65px !important;}
   #mobile_wifi {display: block; float: right;}
   .mobile_column {padding-left: 0!important;}
-  #about_window {width: 100%; height: 100%; max-height: calc(100vh - 150px);}
+  #about_window {width: 100%; height: calc(100% - 100px); max-height: 400px; }
   .about_content {overflow-y: scroll!important; margin-bottom: 20px;}
 #about_window h1 {font-size: 1.25em !important; line-height: 1em; }
 
@@ -484,11 +485,11 @@ button:hover {cursor: pointer; color:# }
   
 }
 
-.mobile_homepage_context { width: 100%; height: 70%; max-height: 500px; margin-top: 30%; display: flex; align-items: center; justify-content: center;}
+.mobile_homepage_context {position: absolute; width: 100%; height: 100%;  display: flex; align-items: center; justify-content: center;}
 /* .mobile_homepage_context img {max-height: 100%;} */
 
 
-#mobile_logo {height: 55%; max-width: 200px;  animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
+#mobile_logo {height: 45%; max-width: 210px;  animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
 #mobile_moto {height: 100%;  max-height: 700px; width: 95%; max-width: 430px; }
 .mobile_time {width: 100%; font-size: 75px; color: white;  position: absolute;  }
 .mobile_toolbar {
