--- a/css/index.css
+++ b/css/index.css
@@ -357,7 +357,8 @@ button:hover {cursor: pointer; color:# }
 .wf_tri_poster_container {display: table; width: 100%; white-space: nowrap; height: 100px;}
 .project_h1 {line-height: 45px;}
 .tincture img{width: 100%;}
-
+#tribal_sketch {height: 450px; width: 99%;}
+#tribal_shirt {height: 450px;}
 
 @media screen and (min-width: 1100px ) {
   .artboard_columnthird{ width: 30%; margin-right: 2%; }
@@ -431,6 +432,8 @@ button:hover {cursor: pointer; color:# }
   #ct_portrait {margin-top: 175px;}
   #docs_flex_column {order: -1 !important;}
   #docs_flex_column2 {order: 2;}
+  #tribal_sketch {width: 100%; height: auto; }
+  #tribal_shirt {width: 100%; height: unset;}
 }
 
 
