--- a/css/index.css
+++ b/css/index.css
@@ -220,7 +220,7 @@ button:hover {cursor: pointer; color:# }
 
 /* About Window CSS ---------------------------------------------------------------------------------------------------- */
 
-#about_window {width: 100%; max-width: 900px; height: calc(100% - 200px);  max-height:500px; background:#ececec;}
+#about_window {position: fixed; left: 20%; width: 100%; max-width: 900px; height: calc(100% - 200px);  max-height:500px; background:#ececec; }
 .about_menu {width: 100%; bottom: 0px;  position: absolute;  background: #49588b; height: 40px; z-index: 10; align-items: center; }
 .about_menu button {width: 32%; margin-top: 10px; font-family: 'GreycliffCF-Thin', sans-serif; text-transform: uppercase; font-size: 0.85rem; color: white;}
 #middle_about_menu_item {border: 1px solid white; border-style: none solid none solid;}
@@ -411,7 +411,7 @@ button:hover {cursor: pointer; color:# }
   .slide_image {height: 70%; width: auto; display: flex; justify-content: middle;}
   .slideshow_btn {height: calc(100% - 100px); top: 20px;}
   .about_content {margin: 0px; width: 100%; }
-  #about_window { top: 45px; height: calc(100% - 150px);  }
+  #about_window { left: 0; top: 45px; height: calc(100% - 150px);  }
   #about_window h1 {font-size: 18px !important; line-height: 22px;}
   .about_section {margin: 15px; }
   #mobile_dock_container {display: block !important;}
