--- a/css/index.css
+++ b/css/index.css
@@ -222,28 +222,18 @@ button:hover {cursor: pointer; color:# }
 
 /* About Window CSS ---------------------------------------------------------------------------------------------------- */
 
-#about_window {position: fixed; left: 20%; width: 100%; max-width: 900px; height: calc(100% - 200px);  max-height:500px; background:#ececec; }
-.about_menu {width: 100%; bottom: 0px;  position: absolute;  background: #49588b; height: 40px; z-index: 10; align-items: center; }
-.about_menu button {width: 32%; margin-top: 10px; font-family: 'GreycliffCF-Thin', sans-serif; text-transform: uppercase; font-size: 0.85rem; color: white;}
-#middle_about_menu_item {border: 1px solid white; border-style: none solid none solid;}
-
-
-.about_content { margin-top: 40px; height: calc(90%); z-index: 2;  display: flex;  align-items: center;  overflow-x: hidden;  }
-.about_section { width: 100%; height: 90%;  align-items: center;  }
-#about_window h1 {font-size: 24px !important; font-family: 'GreycliffCF-Heavy', sans-serif; line-height: 30px;}
-
-.about_menu_item:hover {transform: scale(1.1);}
-.about_col_left {width: calc(50% - 100px); height: 90%;  margin: 0px 0px 100px 50px; float: left;  object-fit: contain; }
-.about_col_right {width:calc(50% - 50px); height: 90%;  margin: 0px 25px 50px 0px; float: right; }
+#about_window {width: 100%; max-width: 900px; height: 100%;  max-height:500px; background:#ececec; }
+ #about_content_wrapper { top: 40px; width: 100%; height: calc(100% - 30px); }
+.about_slide {padding: 20px; height: 100%; width: 100%; overflow-y: scroll;}
+.about_slide h1 {font-size: 1.5rem; line-height: 1.75rem;}
+.about_content {padding: 15px;}
+.about_nav {width: 100%; margin: 25px 0px; text-align: center;}
+.about_nav button { margin: 10px; padding: 10px; width: 50%; font-family: 'GreycliffCF-Thin', sans-serif; text-transform: uppercase; font-size: 0.85rem; color: white; background: #49588b; }
+#section2 li {list-style: none;}
 #section2 {text-align: center;}
-#section2 li { list-style: none;}
-
-
-
 
 /* Contact Window CSS --------------------------------------------------------------------------------------------------- */
 #contact_window {height: 550px; max-width: 400px; top: 25%; contain: content; overflow: hidden;}
-
 #contact_window_content p {padding: 0% 5%; }
 #contact_window_content img {height: 80px; padding-left: 20px; }
 #contact_window_content img:hover {transform: scale(1.1); cursor: alias;}
@@ -327,8 +317,6 @@ button:hover {cursor: pointer; color:# }
 
 
 /* Case Studies Window CSS --------------------------------------------------------------------------- */
-#case_studies_wrapper {width: 100vw; height: calc(100vh - 200px); top: 50px; z-index: 20000; display: flex; align-items: center; justify-content: center; }
-
 .artboard{height: 500px; padding: 50px; }
 .case {width: 100%; max-width: 1100px; height: calc(100% - 200px); top: 50px; background-color: #ececec; overflow: auto;}
 .artboard img {  margin: 0% 1% 1% 0%;}
@@ -413,23 +401,18 @@ button:hover {cursor: pointer; color:# }
   .slide_caption_wrapper {bottom: 15px; width: 90%;}
   .slide_image {height: 70%; width: auto; display: flex; justify-content: middle;}
   .slideshow_btn {height: calc(100% - 100px); top: 20px;}
-  .about_content {margin: 0px; width: 100%; }
-  #about_window { left: 0; top: 45px; height: calc(100% - 150px);  }
-  #about_window h1 {font-size: 18px !important; line-height: 22px;}
-  .about_section {margin: 15px; }
+
+  #about_window {
+    max-height: calc(100% - 100px);
+  }
+
   #mobile_dock_container {display: block !important;}
   .window {top: 38px;}
   #photo_viewer{ top: 65px !important;}
   #mobile_wifi {display: block; float: right;}
   .mobile_column {padding-left: 0!important;}
-  #about_window {width: 100%; top: 40px; max-height: 100%; }
-  .about_content {overflow-y: scroll!important; }
-  #about_window h1 {font-size: 1.25em !important; line-height: 1em; }
   .photo_frame {margin-top: 25px;}
   .photo_carousel {bottom: -5px;}
-  .about_col_left, .about_col_right {width: 90%; margin: 0px 20px 20px 20px; height: auto; overflow-x: hidden; overflow-y: scroll;}
-  .about_col_left img {margin-top: 35px;}
-  .about_section {width: 100%;}
   .photo_frame img{max-height:700px; height:80%; width:100%; object-fit:cover;}
   .tincture {display: block; width: 90%; margin-left: 5% !important;}
   #ct_portrait {margin-top: 175px;}
@@ -490,7 +473,6 @@ button:hover {cursor: pointer; color:# }
   height: 100vh;
   width: 100vw;
   background-image: url('../src/splash+contexts/rainbow.svg');
-  
   background-size: contain; background-repeat: no-repeat;  background-color: #2E345B;
   top: 40px;
   z-index: 1000000;
@@ -501,10 +483,7 @@ button:hover {cursor: pointer; color:# }
   
 }
 
-.mobile_homepage_context {position: absolute; width: 100%; height: 100%;  display: flex; align-items: center; justify-content: center;}
-/* .mobile_homepage_context img {max-height: 100%;} */
-
-
+.mobile_homepage_context {position: absolute; width: 100%; height: 90%; display: flex; align-items: center; justify-content: center;}
 #mobile_logo {height: 45%; max-width: 210px;  animation: rotateStars 15s infinite; position: absolute; z-index: 3; }
 #mobile_moto {height: 100%;  max-height: 700px; width: 95%; max-width: 430px; }
 .mobile_time {width: 100%; font-size: 75px; color: white;  position: absolute;  }
